tests/NormalTests/paczka1/fuzzy1/49241222.err
Error in line 5: ?tl>bbh
Error in line 7: UFjEV6Y2Jp A797 63,5
Error in line 17: o3I0p A756 91,4
